--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
-compatibility_date = "2023-10-16"
-main = "src/index.ts"
+#compatibility_date = "2023-10-16"
+main = "./src/index.ts"
 name = "r2-webdav"
 
 node_compat = true
